crates/amalgam-parser/tests/snapshots/comprehensive_nickel_test__import_debugging.snap
---
source: crates/amalgam-parser/tests/comprehensive_nickel_test.rs
expression: snapshot_content
---
SUCCESS: false

OUTPUT:
STDERR:
error: unexpected token
   ┌─ /Users/jtoft/src/ai/amalgam/test_comprehensive_temp_68348_2.ncl:19:7
   │
19 │       let k8s = import "examples/pkgs/k8s_io/mod.ncl" in
   │       ^^^

error: unexpected token
   ┌─ /Users/jtoft/src/ai/amalgam/test_comprehensive_temp_68348_2.ncl:21:82
   │
21 │         label_selector = k8s.v1.LabelSelector & { matchLabels = { app = "test" } },
   │                                                                                  ^

error: unexpected token
   ┌─ /Users/jtoft/src/ai/amalgam/test_comprehensive_temp_68348_2.ncl:21:83
   │
21 │         label_selector = k8s.v1.LabelSelector & { matchLabels = { app = "test" } },
   │                                                                                   ^


STDOUT:
